--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -70,7 +70,6 @@
     max-width: 100%;
     max-height: 100%;
     transform: translateY(101%);
-    overflow: auto;
     transition: transform var(--animation-time) var(--cubic),
         box-shadow var(--animation-time) var(--cubic);
 
@@ -84,6 +83,7 @@
         transform: translateY(0);
     }
 }
+
 
 .card-box__overlay_text {
     font-size: 18px;
